syntax = "proto3";

option csharp_namespace = "GrpcEmployee";

package employee;
import "project.proto";
import "google/protobuf/wrappers.proto"; 

service GrpcServiceEmployee {
  rpc GetEmployees (Empty) returns (GetEmployeesResponse);
}

enum Gender {
    UNSPECIFIC = 0;
    MALE = 1; 
    FEMALE = 2; 
}

message Empty {}

message GetEmployeesResponse {
  repeated EmployeeModel Employees = 1;
}

message EmployeeModel {
  google.protobuf.StringValue Id = 1;
  google.protobuf.StringValue FirstName = 2;
  google.protobuf.StringValue LastName = 3;
  google.protobuf.StringValue Email = 4;
  google.protobuf.StringValue PhoneNumber = 5;
  google.protobuf.StringValue Address = 6;
  google.protobuf.StringValue City = 7;
  Gender Gender = 8;

  repeated project.ProjectModel Projects = 9;
}
