syntax = "proto3";

option csharp_namespace = "GrpcProject";

package project;
import "google/protobuf/timestamp.proto";

service GrpcServiceProject {
	rpc GetProjects (Empty) returns (GetProjectsResponse);
}

enum ProjectStatus {
	DEFAULT = 0;
	InProgress = 1;
	Complete = 2;
	Postpone = 3;
}

message Empty {}


message GetProjectsResponse {
	repeated ProjectModel Projects = 1;
}

message ProjectModel {
	optional string Name = 1;

	optional string Description = 2;

	google.protobuf.Timestamp StartDate = 3;

	optional google.protobuf.Timestamp EndDate = 4;

	ProjectStatus Status = 5;
}